# vm-course_hw-5

./: .gitignore  FunctionalBubbleSort.java  ImperativeBubbleSort.java  Lama.opam.template  pom.xml
.github/workflows/: blank.yml  docker.yml
Lama/: Lama.opam
Lama/byterun/: dune
Lama/performance/: Sort.lama
Lama/regression/: test092.lama  test095.lama
Lama/runtime32/: runtime.c
Lama/spec/: 03.04.expressions.tex
Lama/src/: Language.ml  dune
Lama/stdlib/: Makefile
Lama/tutorial/: dune
byterun/: byterun.c
performance/: dune
regression/: test092.t  test095.t  test098.t
runtime32/: dune
scripts/: common.py  test.py
spec/: 04.extensions.tex  08.standard_library.tex
src/: X86_32.ml  X86_64.ml
src/main/antlr4/space/elteammate/lama/parser/: Lama.g4
src/main/java/space/elteammate/lama/: LamaContext.java  LamaException.java  LamaLanguage.java  PolyglotLamaMain.java  TruffleLamaMain.java
src/main/java/space/elteammate/lama/nodes/: AddNode.java  LamaBaseNode.java  LamaNode.java  LamaRootNode.java  NumNode.java
src/main/java/space/elteammate/lama/parser/: LamaNodeParser.java  LamaNodeVisitor.java  LamaVisitor.java  ParsingException.java
src/main/java/space/elteammate/lama/types/: ClosureObject.java  FunctionObject.java  LamaCallTarget.java  LamaList.java  LamaTypes.java  ModuleObject.java  ModuleResultObject.java  Sexp.java
src/main/java/space/elteammate/lama/util/: CachedSupplier.java
src/test/java/space/elteammate/lama/: LamaTest.java  README.md
stdlib/regression/: dune  gen.ml
tests/: 00-smoke.lama  01-assoc.lama  02-precedence.lama
(+61 files in other folders)
